--- a/tex/definitions.tex
+++ b/tex/definitions.tex
@@ -29,6 +29,8 @@
 
 \newcommand{\SetTechnician}{T(\VarMetaTime)}
 \newcommand{\ElementTechnician}{t}
+\newcommand{\SetMessageQueue}{M}
+\newcommand{\ElementMessage}[2]{m_{#1}^{#2}}
 
 % Parameters
 \newcommand{\ParStrategicValue}[1][\VarMetaTime]{strategic\_value_{\ElementWorkOrder \ElementPeriod}(#1)}
@@ -96,3 +98,4 @@
 % Meta variables
 \newcommand{\VarMetaTime}{\tau}
 
+\newcommand{\ParMessageQueue}[1]{Q_{#1}}
