--- a/tex/models/strategic.tex
+++ b/tex/models/strategic.tex
@@ -1,24 +1,24 @@
 
 \newpage
 \begin{alignat}{2}
-	& \text{\rule{\linewidth}{0.4pt}} \notag\\
-	& \textbf{Meta variables:} \notag\\
-	& \ElementScheduler \in \SetScheduler \\
-	& \VarTacticalWork{}{} \\ 
-	& \tau \in [0, \infty] \\
-	& \text{\rule{\linewidth}{0.4pt}} \notag\\
-	& \textbf{Maximize:} \notag                                                                                                                                                        \\
-	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}  \notag\\ 
-	& - \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicPenalty \cdot \VarStrategicExcess     \notag                                              \\
-	& + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementWorkOrder1 \in \SetWorkOrder{}} \sum_{\ElementWorkOrder2 \in \SetWorkOrder{}} 	 \quad \ParClusteringValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder1}{\ElementPeriod} \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder2}{\ElementPeriod}  \\
-	& \text{\rule{\linewidth}{0.4pt}} \notag\\
-	& \textbf{Subject to:} \notag                                                                                                                                                      \\
-	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \ParStrategicWorkOrderWeight \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \leq \ \ParStrategicResource + \VarStrategicExcess                                                                           \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                                                                      \\
-	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1              \quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                      \\
-	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 0                                                            \quad \forall (\ElementWorkOrder, \ElementPeriod) \in \ParStrategicExclude                                                                                                       \\
-	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1                                                            \quad \forall (\ElementWorkOrder, \ElementPeriod) \in \ParStrategicInclude                                                                                                       \\
-	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \in \{0, 1\}                                                   \quad \forall \ElementWorkOrder \in \SetWorkOrder{} \quad \forall \ElementPeriod \in \SetPeriod                                                                                 \\ 
-	& \VarStrategicExcess \in \mathbb{R}^{+}                                                                                             \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                                                                  \\ 
+	& \text{\rule{\linewidth}{0.4pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
+	& \textbf{Meta variables:} \notag                                                                                                                                                                                                                                                                                                                                                \\ 
+	& \ElementScheduler \in \SetScheduler                                                                                                                                                                                                                                                                                                                                           \label{eqn:meta:scheduler:strategic}  \\ 
+	& \VarTacticalWork{}{}                                                                                                                                                                                                                                                                                                                                                          \label{eqn:meta:tactical:strategic}      \\ 
+	& \tau \in [0, \infty]                                                                                                                                                                                                                                                                                                                                                          \label{eqn:meta:time:strategic}                                     \\ 
+	& \text{\rule{\linewidth}{0.4pt}} \notag                                                                                                                                                                                                                                                                                                                                              \\
+	& \textbf{Maximize:} \notag                                                                                                                                                                                                                                                                                                                                                     \label{eqn:objective:strategic}                                     \\
+	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}  \notag                                                                                                                                                                                                                             \\ 
+	& - \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicPenalty \cdot \VarStrategicExcess     \notag                                                                                                                                                                                                                                                                          \\
+	& + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementWorkOrder1 \in \SetWorkOrder{}} \sum_{\ElementWorkOrder2 \in \SetWorkOrder{}} 	 \quad \ParClusteringValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder1}{\ElementPeriod} \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder2}{\ElementPeriod}                                                                                             \\
+	& \text{\rule{\linewidth}{0.4pt}} \notag                                                                                                                                                                                                                                                                                                                                                                             \\
+	& \textbf{Subject to:} \notag                                                                                                                                                                                                                                                                                                                                                                                        \\
+	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \ParStrategicWorkOrderWeight \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \leq \ \ParStrategicResource + \VarStrategicExcess                                                                           \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                \label{eqn:constraint:strategic:resource}\\
+	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1              \quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                                                                               \label{eqn:constraint:strategic:schedule_once}\\
+	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 0                                                            \quad \forall (\ElementWorkOrder, \ElementPeriod) \in \ParStrategicExclude                                                                                                                                                                                               \label{eqn:constraint:strategic:include}\\
+	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1                                                            \quad \forall (\ElementWorkOrder, \ElementPeriod) \in \ParStrategicInclude                                                                                                                                                                                               \label{eqn:constraint:strategic:exclude}\\
+	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \in \{0, 1\}                                                   \quad \forall \ElementWorkOrder \in \SetWorkOrder{} \quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                           \label{eqn:variable:strategic:assignment}      \\ 
+	& \VarStrategicExcess \in \mathbb{R}^{+}                                                                                             \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                                                                                                                                                               \label{eqn:variable:strateigc:penalty}\\ 
 	& \text{\rule{\linewidth}{0.4pt}} \notag
 \end{alignat}
 \newpage
